--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ thiserror = "1"
 rust-argon2 = "1"
 uuid = { version = "1", features = [ "v4", "fast-rng", "serde" ] }
 raise = "2"
+dotenv = "0.15"
 rand = "0.8"
 sqlx = { version = "0.6", features = [ "runtime-actix-rustls", "mysql", "uuid", "offline" ] }
+hex = "0.4"
 exun = "0.1"
