--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,6 @@ raise = "2"
 dotenv = "0.15"
 rand = "0.8"
 sqlx = { version = "0.6", features = [ "runtime-actix-rustls", "mysql", "uuid", "offline" ] }
+log = "0.4"
 hex = "0.4"
 exun = "0.1"
