--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "4"
+actix-web = { version = "4", features = ["rustls"] }
 tera = "1"
 serde = "1"
 thiserror = "1"
@@ -15,12 +15,14 @@ uuid = { version = "1", features = [ "v4", "fast-rng", "serde" ] }
 url = { version = "2", features = ["serde"] }
 raise = "2"
 exun = "0.1"
+base64 = "0.21"
 rust-ini = "0.18"
 dotenv = "0.15"
 parking_lot = "0.12"
 grass = "0.12"
 unic-langid = { version = "0.9", features = ["serde"] }
 rand = "0.8"
+serde_urlencoded = "0.7"
 sqlx = { version = "0.6", features = [ "runtime-actix-rustls", "mysql", "uuid", "offline" ] }
 log = "0.4"
 hex = "0.4"
