--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ tera = "1"
 serde = "1"
 thiserror = "1"
 rust-argon2 = "1"
+path-clean = "1"
 uuid = { version = "1", features = [ "v4", "fast-rng", "serde" ] }
 url = { version = "2", features = ["serde"] }
 raise = "2"
