--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 actix-web = { version = "4", features = ["rustls"] }
+actix-rt = "2"
 tera = "1"
 serde = "1"
 thiserror = "1"
