--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ path-clean = "1"
 uuid = { version = "1", features = [ "v4", "fast-rng", "serde" ] }
 url = { version = "2", features = ["serde"] }
 raise = "2"
+serde_json = "1"
 exun = "0.1"
 base64 = "0.21"
 rust-ini = "0.18"
@@ -32,3 +33,4 @@ sqlx = { version = "0.6", features = [ "runtime-actix-rustls", "mysql", "uuid", 
 log = "0.4"
 chrono = { version = "0.4", features = ["serde"] }
 hex = "0.4"
+serde_variant = "0.1"
