--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,9 @@ grass = "0.12"
 sha2 = "0.10"
 unic-langid = { version = "0.9", features = ["serde"] }
 rand = "0.8"
+bpaf = { version = "0.8", features = ["derive"] }
 serde_urlencoded = "0.7"
+toml = { version = "0.7", features = ["parse"] }
 sqlx = { version = "0.6", features = [ "runtime-actix-rustls", "mysql", "uuid", "chrono", "offline" ] }
 log = "0.4"
 chrono = { version = "0.4", features = ["serde"] }
