--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ rand = "0.8"
 bpaf = { version = "0.8", features = ["derive"] }
 serde_urlencoded = "0.7"
 toml = { version = "0.7", features = ["parse"] }
-sqlx = { version = "0.6", features = [ "runtime-actix-rustls", "mysql", "uuid", "chrono", "offline" ] }
+sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "mysql", "uuid", "chrono" ] }
 log = "0.4"
 chrono = { version = "0.4", features = ["serde"] }
 hex = "0.4"
